data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1921.wast
;; 2. **Test Large Index in `br_table`**:    - **Description**: Use a `br_table` with an index operand larger than the number of labels provided.    - **Reasoning**: Verifies that the implementation correctly defaults to the resolved branch target for out-of-bounds indices.    - **Edge Relation**: Examines if edge cases with large indices lead to incorrect branching or errors.

(assert_invalid
  (module
    (func $large-index-br_table
      (block 
        (br_table 0 0 (i32.const 999))
      )
      (i32.const 1) (drop)
    )
  )
  "index out of bounds"
)